--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
       id: git_log
       uses: Edisonboy/latest-git-log-action@main
       with:
-        tag: origin/master
+        tag: origin/main
 
     - name: Send email
       uses: dawidd6/action-send-mail@v3
