--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,26 +6,39 @@ on:
     - master
     - main
 
+env:
+  APP_NAME: ospkgs
+  DOCKER_REPO: devilf/ospkgs
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: 'Checkout codes'
-      uses: actions/checkout@v1
-    - name: Get git log
-      id: git_log
-      uses: Edisonboy/latest-git-log-action@main
+      uses: actions/checkout@v2
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Set up Docker Bildx
+      uses: docker/setup-buildx-action@v1
+    - name: Login to dockerhub
+      uses: docker/login-action@v1
       with:
-        tag: origin/main
-
-    - name: Send email
-      uses: dawidd6/action-send-mail@v3
+        username: ${{secrets.DOCKER_HUB_USERNAME}}
+        password: ${{secrets.DOCKER_HUB_PASSWORD}}
+    - name: Get version
+      run: echo APP_VERSION=`git describe --tags --always` >> $GITHUB_ENV
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
       with:
-        server_address: ${{secrets.MAIL_ADDRESS}}
-        server_port: 465
-        username: ${{secrets.MAIL_USERNAME}}
-        password: ${{secrets.MAIL_PASSWORD}}
-        subject: Github Actions test
-        to: ${{secrets.MAIL_TO_USERNAME}}
-        from: ${{secrets.MAIL_USERNAME}}
-        body: build job of ${{github.repository}} ${{steps.git_log.outputs.log}} completed sucessfully!
+        context: .
+        file: build/template/Dockerfile.template-centos
+        push: true
+        platforms: |
+          linux/arm
+          linux/amd
+        build-args: |
+          APP_NAME=${{env.APP_NAME}}
+          APP_VERSION=${{env.APP_VERSION}}
+        tags: |
+          devilf/ospkgs:latest
