--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,7 @@ on:
 env:
   APP_NAME: ospkgs
   DOCKER_REPO: devilf/ospkgs
+  OS_VERSION: 7.9.2009
 
 jobs:
   build:
@@ -37,7 +38,7 @@ jobs:
       with:
         context: .
         file: build/template/Dockerfile.template-centos
-        push: true
+        push: ${{github.event_name != 'pull_request'}}
         platforms: |
           linux/arm64
           linux/amd64
@@ -45,4 +46,35 @@ jobs:
           APP_NAME=${{env.APP_NAME}}
           APP_VERSION=${{env.APP_VERSION}}
         tags: |
-          devilf/ospkgs:${{env.APP_VERSION}}
+          devilf/ospkgs:${{env.OS_VERSION}}
+    # - name: Gen new dockerfile
+    #   shell: bash
+    #   run: |
+    #     echo -e "FROM scratch\nCOPY --from=${{ env.IMAGE_REPO }}/${{ matrix.image_name }}:${{ env.IMAGE_TAG }} / /" > Dockerfile
+    # - name: Build image to local
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     context: .
+    #     file: Dockerfile
+    #     platforms: |
+    #       linux/arm64
+    #       linux/amd64
+    #     outputs: type=local,dest=./
+    # - name: Prepare for upload package
+    #   shell: bash
+    #   run: |
+    #     mv linux_amd64/offline offline
+    #     tar -I pigz -cf offline-amd64.tar.gz offline --remove-files
+    #     mv linux_arm64/offline offline
+    #     tar -I pigz -cf offline-arm64.tar.gz offline --remove-files
+    #     sha256sum offline-{amd64,arm64}.tar.gz > offline.sha256sum.txt
+    # - name: Release and upload packages
+    #   if: startsWith(github.ref, 'refs/tags/')
+    #   uses: softprops/action-gh-release@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     files: |
+    #       offline-amd64.tar.gz
+    #       offline-arm64.tar.gz
+    #       offline.sha256sum.txt
