--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,21 +12,21 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
-    matrix:
-      include:
-      - version: 7.9.2009
-        image: centos
-      - version: 7.8.2003
-        image: centos
-      - version: 7.7.1908
-        image: centos
-      - version: 7.6.1810
-        image: centos
-      - version: 7.5.1804
-        image: centos
+      matrix:
+        include:
+        - version: 7.9.2009
+          image: centos
+        - version: 7.8.2003
+          image: centos
+        - version: 7.7.1908
+          image: centos
+        - version: 7.6.1810
+          image: centos
+        - version: 7.5.1804
+          image: centos
     steps:
     - name: 'Checkout codes'
       uses: actions/checkout@v2
