--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,14 +19,19 @@ jobs:
         include:
         - version: 7.9.2009
           image: centos
+          platform: linux/amd64,linux/arm64
         - version: 7.8.2003
           image: centos
+          platform: linux/amd64
         - version: 7.7.1908
           image: centos
+          platform: linux/amd64
         - version: 7.6.1810
           image: centos
+          platform: linux/amd64
         - version: 7.5.1804
           image: centos
+          platform: linux/amd64
     steps:
     - name: 'Checkout codes'
       uses: actions/checkout@v2
@@ -52,9 +57,7 @@ jobs:
         context: .
         file: Dockerfile.${{matrix.image}}-${{matrix.version}}
         push: ${{github.event_name != 'pull_request'}}
-        platforms: |
-          linux/arm64
-          linux/amd64
+        platforms: ${{matrix.platform}}
         # build-args: |
         #   APP_NAME=${{env.APP_NAME}}
         #   APP_VERSION=${{env.APP_VERSION}}
