--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,8 +78,7 @@ jobs:
       shell: bash
       run: |
         ls -l
-        ls -l linux_amd64
-        ls -l linux_arm64
+        ls -l centos
         mv linux_amd64/centos centos
         tar -I pigz -cf os-${{matrix.image}}-${{matrix.version}}-amd64.tar.gz offline --remove-files
         mv linux_arm64/centos centos
