--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,11 +78,15 @@ jobs:
       shell: bash
       run: |
         ls -l
-        ls -l centos
-        mv linux_amd64/centos centos
-        tar -I pigz -cf os-${{matrix.image}}-${{matrix.version}}-amd64.tar.gz offline --remove-files
-        mv linux_arm64/centos centos
-        tar -I pigz -cf os-${{matrix.image}}-${{matrix.version}}-arm64.tar.gz offline --remove-files
+        platform=(amd64 arm64)
+        for p in ${platform[@]};do
+          if [ -d linux_${p}/centos ];then
+            mv linux_${p}/centos centos
+            tar -I pigz -cf os-${{matrix.image}}-${{matrix.version}}-${p}.tar.gz centos --remove-files
+          elif [ -d centos ];then
+            tar -I pigz -cf os-${{matrix.image}}-${{matrix.version}}-amd64.tar.gz centos --remove-files
+          fi
+        done
         sha256sum os-${{matrix.image}}-${{matrix.version}}-{amd64,arm64}.tar.gz > os-${{matrix.image}}-${{matrix.version}}.sha256sum.txt
     - name: Release and upload packages
       if: startsWith(github.ref, 'refs/tags/')
