--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,8 +33,10 @@ jobs:
           image: centos
           platform: linux/amd64
     steps:
-    - name: 'Checkout codes'
+    - name: Checkout
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Bildx
