--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,6 +94,44 @@ jobs:
         else
           sha256sum os-${{matrix.image}}-${{matrix.version}}-amd64.tar.gz > os-${{matrix.image}}-${{matrix.version}}.sha256sum.txt
         fi
+  tag_version:
+    needs: build
+    runs-on: ubuntu-20.04
+    outputs:
+      tagged: ${{ steps.check_tagged.outputs.tagged }}
+      tag: ${{ steps.tag.outputs.new_tag }}
+    steps:
+    - name: Checkout dist branch
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ needs.build_and_push.outputs.branch }}
+        fetch-depth: 0
+
+    - name: Check tag exists
+      id: check_tag
+      uses: mukunku/tag-exists-action@v1.0.0
+      with:
+        tag: ${{ needs.build_and_push.outputs.tag }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Tag version
+      id: tag
+      if: ${{ steps.check_tag.outputs.exists == 'false' }}
+      uses: anothrNick/github-tag-action@1.34.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        CUSTOM_TAG: ${{ needs.build_and_push.outputs.tag }}
+
+    - name: ⚙️ Check created tag
+      id: check_tagged
+      run: |
+        echo "::set-output name=tagged::${{ (steps.check_tag.outputs.exists == 'false') && (steps.tag.outputs.new_tag == steps.tag.outputs.tag) }}"
+  create_release:
+    needs: tag_version
+    if: ${{ needs.tag_version.outputs.tagged == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
     - name: Release and upload packages
       if: ${{ success() }}
       uses: softprops/action-gh-release@v1
