--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -104,14 +104,14 @@ jobs:
     - name: Checkout dist branch
       uses: actions/checkout@v2
       with:
-        ref: ${{ needs.build_and_push.outputs.branch }}
+        ref: ${{ needs.build.outputs.branch }}
         fetch-depth: 0
 
     - name: Check tag exists
       id: check_tag
       uses: mukunku/tag-exists-action@v1.0.0
       with:
-        tag: ${{ needs.build_and_push.outputs.tag }}
+        tag: ${{ needs.build.outputs.tag }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -121,7 +121,7 @@ jobs:
       uses: anothrNick/github-tag-action@1.34.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CUSTOM_TAG: ${{ needs.build_and_push.outputs.tag }}
+        CUSTOM_TAG: ${{ needs.build.outputs.tag }}
 
     - name: ⚙️ Check created tag
       id: check_tagged
@@ -133,7 +133,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Release and upload packages
-      if: ${{ success() }}
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
