--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,7 +34,7 @@ jobs:
           platform: linux/amd64
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0
     - name: Set up QEMU
@@ -102,37 +102,46 @@ jobs:
       tag: ${{ steps.tag.outputs.new_tag }}
     steps:
     - name: Checkout dist branch
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
-        ref: ${{ needs.build.outputs.branch }}
         fetch-depth: 0
-
+    - name: Get version and tag info
+      id: version
+      uses: ashley-taylor/read-json-property-action@v1.0
+      with:
+        path: ./.version.json
+        property: version
     - name: Check tag exists
       id: check_tag
-      uses: mukunku/tag-exists-action@v1.0.0
+      # return exists, a string of 'true' or 'false'
+      # https://github.com/mukunku/tag-exists-action
+      uses: mukunku/tag-exists-action@v1.2.0
       with:
-        tag: ${{ needs.build.outputs.tag }}
+        tag: ${{ steps.version.outputs.value }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Tag version
       id: tag
       if: ${{ steps.check_tag.outputs.exists == 'false' }}
-      uses: anothrNick/github-tag-action@1.34.0
+      # return new_tag and tag
+      uses: anothrNick/github-tag-action@1.55.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CUSTOM_TAG: ${{ needs.build.outputs.tag }}
+        WITH_V: true
 
-    - name: Check created tag
-      id: check_tagged
-      run: |
-        echo "::set-output name=tagged::${{ (steps.check_tag.outputs.exists == 'false') && (steps.tag.outputs.new_tag == steps.tag.outputs.tag) }}"
+    # - name: Check created tag
+    #   id: check_tagged
+    #   run: |
+    #     echo "::set-output name=tagged::${{ (steps.check_tag.outputs.exists == 'false') && (steps.tag.outputs.new_tag == steps.tag.outputs.tag) }}"
   create_release:
     needs: tag_version
-    if: ${{ needs.tag_version.outputs.tagged == 'true' }}
+    # if: ${{ needs.tag_version.outputs.tagged == 'true' }}
     runs-on: ubuntu-latest
     steps:
     - name: Release and upload packages
+      if: startsWith(github.ref, 'refs/tags/')
+      # https://github.com/softprops/action-gh-release
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
