--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,11 +38,12 @@ jobs:
       with:
         fetch-depth: 0
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      uses: docker/setup-qemu-action@v2
     - name: Set up Docker Bildx
-      uses: docker/setup-buildx-action@v1
+      # 设置多架构
+      uses: docker/setup-buildx-action@v2
     - name: Login to dockerhub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         username: ${{secrets.DOCKER_HUB_USERNAME}}
         password: ${{secrets.DOCKER_HUB_PASSWORD}}
@@ -54,11 +55,13 @@ jobs:
         sed "s/OS_VERSION/${{matrix.version}}/g" build/template/Dockerfile.template-centos7 > Dockerfile.${{matrix.image}}-${{matrix.version}}
     - name: Build and push
       id: docker_build
-      uses: docker/build-push-action@v2
+      # 多架构构建
+      # https://github.com/docker/build-push-action
+      uses: docker/build-push-action@v4
       with:
         context: .
         file: Dockerfile.${{matrix.image}}-${{matrix.version}}
-        push: ${{github.event_name != 'pull_request'}}
+        push: true
         platforms: ${{matrix.platform}}
         # build-args: |
         #   APP_NAME=${{env.APP_NAME}}
@@ -70,7 +73,8 @@ jobs:
       run: |
         echo -e "FROM scratch\nCOPY --from=devilf/os-${{matrix.image}}:${{matrix.version}} / /" > Dockerfile.release.${{matrix.image}}-${{matrix.version}}
     - name: Build image to local
-      uses: docker/build-push-action@v2
+      # https://github.com/docker/build-push-action
+      uses: docker/build-push-action@v4
       with:
         context: .
         file: Dockerfile.release.${{matrix.image}}-${{matrix.version}}
@@ -98,7 +102,6 @@ jobs:
     needs: build
     runs-on: ubuntu-20.04
     outputs:
-      tagged: ${{ steps.check_tagged.outputs.tagged }}
       tag: ${{ steps.tag.outputs.new_tag }}
     steps:
     - name: Checkout dist branch
@@ -107,6 +110,8 @@ jobs:
         fetch-depth: 0
     - name: Get version and tag info
       id: version
+      # return value
+      # https://github.com/ashley-taylor/read-json-property-action
       uses: ashley-taylor/read-json-property-action@v1.0
       with:
         path: ./.version.json
@@ -128,7 +133,7 @@ jobs:
       uses: anothrNick/github-tag-action@1.55.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        WITH_V: true
+        CUSTOM_TAG: ${{ steps.version.outputs.value }}
 
     # - name: Check created tag
     #   id: check_tagged
@@ -147,6 +152,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         fail_on_unmatched_files: false
+        tag_name: v${{needs.tag_version.outputs.tag}}
+        release_name: v${{needs.tag_version.outputs.tag}}
         files: |
           os-${{matrix.image}}-${{matrix.version}}-amd64.tar.gz
           os-${{matrix.image}}-${{matrix.version}}-arm64.tar.gz
