debug github action for publish release

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -99,6 +99,7 @@ jobs:
           sha256sum os-${{matrix.image}}-${{matrix.version}}-amd64.tar.gz > os-${{matrix.image}}-${{matrix.version}}.sha256sum.txt
         fi
   tag_version:
+    permissions: write-all
     needs: build
     runs-on: ubuntu-20.04
     outputs:
