--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -146,7 +146,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Release and upload packages
-      if: startsWith(github.ref, 'refs/tags/')
+      # if: startsWith(github.ref, 'refs/tags/')
       # https://github.com/softprops/action-gh-release
       uses: softprops/action-gh-release@v1
       env:
