debug github action for publish release

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -142,7 +142,9 @@ jobs:
     #   run: |
     #     echo "::set-output name=tagged::${{ (steps.check_tag.outputs.exists == 'false') && (steps.tag.outputs.new_tag == steps.tag.outputs.tag) }}"
   create_release:
-    needs: tag_version
+    needs:
+    - build
+    - tag_version
     # if: ${{ needs.tag_version.outputs.tagged == 'true' }}
     runs-on: ubuntu-latest
     steps:
