--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -134,7 +134,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        fail_on_unmatched_files: false
+        fail_on_unmatched_files: true
         tag_name: v${{ steps.version.outputs.value }}
         files: |
           os-${{matrix.image}}-${{matrix.version}}-amd64.tar.gz
