--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.tag.outputs.new_tag }}
     strategy:
@@ -131,13 +131,13 @@ jobs:
     - name: Release and upload packages
       # if: startsWith(github.ref, 'refs/tags/')
       # https://github.com/softprops/action-gh-release
-      uses: softprops/action-gh-release@v1
+      # uses: softprops/action-gh-release@v1
+      uses: ncipollo/release-action@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        fail_on_unmatched_files: false
-        tag_name: ${{ steps.version.outputs.value }}
-        files: |
-          os-${{matrix.image}}-${{matrix.version}}-amd64.tar.gz
-          os-${{matrix.image}}-${{matrix.version}}-arm64.tar.gz
-          os-${{matrix.image}}-${{matrix.version}}.sha256sum.txt
+        # fail_on_unmatched_files: false
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ steps.version.outputs.value }}
+        name: ${{ steps.version.outputs.value }}
+        artifacts: "*.tar.gz,*.sha256sum.txt"
