--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,8 +16,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      tag: ${{ steps.tag.outputs.new_tag }}
     strategy:
       fail-fast: false
       matrix:
@@ -105,6 +103,12 @@ jobs:
         fi
         echo "xxxxxxxxxxxxxx"
         ls -l
+  create_tag:
+    runs-on: ubuntu-latest
+    needs: build
+    outputs:
+      tag: ${{ steps.tag.outputs.new_tag }}
+    steps:
     - name: Get version and tag info
       id: version
       # return value
@@ -130,7 +134,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         CUSTOM_TAG: ${{ steps.version.outputs.value }}
-
+  publish_release:
+    runs-on: ubuntu-latest
+    needs: create_tag
+    steps:
     - name: Release and upload packages
       # if: startsWith(github.ref, 'refs/tags/')
       # https://github.com/softprops/action-gh-release
@@ -141,6 +148,7 @@ jobs:
       with:
         # fail_on_unmatched_files: false
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: ${{ steps.version.outputs.value }}
-        name: ${{ steps.version.outputs.value }}
+        tag: ${{ needs.create_tag.outputs.tag }}
+        name: ${{ needs.create_tag.outputs.tag }}
         artifacts: "*.tar.gz,*.sha256sum.txt"
+        replacesArtifacts: true
