debug github action for publish release

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -109,6 +109,10 @@ jobs:
     outputs:
       tag: ${{ steps.tag.outputs.new_tag }}
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Get version and tag info
       id: version
       # return value
