--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -142,6 +142,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: create_tag
     steps:
+    - name: Prepare for upload package
+      shell: bash
+      run: |
+        ls -l
     - name: Release and upload packages
       # if: startsWith(github.ref, 'refs/tags/')
       # https://github.com/softprops/action-gh-release
