--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -146,6 +146,7 @@ jobs:
       shell: bash
       run: |
         ls -l
+        echo ${{ needs.create_tag.outputs.tag }}
     - name: Release and upload packages
       # if: startsWith(github.ref, 'refs/tags/')
       # https://github.com/softprops/action-gh-release
