--- a/packages.yaml
+++ b/packages.yaml
@@ -19,7 +19,16 @@ packages:
     docker:
     - docker-ce-19.03.14
     - docker-ce-cli-19.03.14
-    - containerd.io
+    - audit-libs-python-2.8.5
+    - checkpolicy-2.5
+    - containerd.io-1.6.6
+    - container-selinux-2.119.2
+    - libcgroup-0.41
+    - libseccomp-2.3.1
+    - libsemanage-python-2.5
+    - policycoreutils-python-2.5
+    - python-IPy-0.75
+    - setools-libs-3.3.8
     kubernetes:
     - kubelet-1.18.19
     - kubectl-1.18.19
