--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,6 +11,7 @@ permissions:
 
 env:
   DOCKER_REPO: devilf/os-offline
+  REPO_NAME: os-offline
 
 jobs:
   build:
@@ -49,31 +50,47 @@ jobs:
     - name: Set up Docker Bildx
       # 设置多架构
       uses: docker/setup-buildx-action@v2
-    - name: Login to dockerhub
+    - name: Login to aliyun registry
       uses: docker/login-action@v2
       with:
-        username: ${{secrets.DOCKER_HUB_USERNAME}}
-        password: ${{secrets.DOCKER_HUB_PASSWORD}}
+        registry: ${{secrets.REPO_ADDR}}
+        username: ${{secrets.REPO_USERNAME}}
+        password: ${{secrets.REPO_PASSWORD}}
     - name: Get version
       run: echo APP_VERSION=`git describe --tags --always` >> $GITHUB_ENV
     - name: Gen Dockerfile
       shell: bash
       run: |
-        sed "s/OS_VERSION/${{matrix.version}}/g" build/Dockerfile.template-centos${{ matrix.major_version }} > Dockerfile.${{matrix.image}}-${{matrix.version}}
-    - name: Build image
+        sed "s/OS_VERSION/${{matrix.version}}/g" build/Dockerfile.template-centos${{ matrix.major_version }}-os > Dockerfile.${{matrix.image}}-${{matrix.version}}-os
+        sed "s/OS_VERSION/${{matrix.version}}/g" build/Dockerfile.template-centos${{ matrix.major_version }}-docker > Dockerfile.${{matrix.image}}-${{matrix.version}}-docker
+    - name: Build image for os
+      id: os_build
+      # 多架构构建
+      # https://github.com/docker/build-push-action
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: Dockerfile.${{matrix.image}}-${{matrix.version}}-os
+        push: true
+        platforms: ${{matrix.platform}}
+        build-args: |
+          OS_MAIN_VERSION=${{ matrix.major_version }}
+        tags: |
+          ${{secrets.REPO_ADDR}}/${{secrets.REPO_NAMESPACE}}/${{ env.REPO_NAME }}:v${{matrix.version}}-${{matrix.image}}
+    - name: Build image for docker
       id: docker_build
       # 多架构构建
       # https://github.com/docker/build-push-action
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: Dockerfile.${{matrix.image}}-${{matrix.version}}
+        file: Dockerfile.${{matrix.image}}-${{matrix.version}}-docker
         push: true
         platforms: ${{matrix.platform}}
         build-args: |
           OS_MAIN_VERSION=${{ matrix.major_version }}
         tags: |
-          ${{ env.DOCKER_REPO }}:v${{matrix.version}}-${{matrix.image}}
+          ${{secrets.REPO_ADDR}}/${{secrets.REPO_NAMESPACE}}/${{ env.REPO_NAME }}:v${{matrix.version}}-docker
 
         # - name: Gen new dockerfile
         #   shell: bash
