--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,4 +45,4 @@ jobs:
         push: true
         platforms: linux/amd64,linux/arm64
         tags: |
-          ${{env.DOCKER_REPO}}:0.1.6
+          ${{env.DOCKER_REPO}}:v0.1.6
