--- a/evs-csi-plugin/Dockerfile
+++ b/evs-csi-plugin/Dockerfile
@@ -6,5 +6,5 @@ COPY evs-csi-plugin /bin/evs-csi-plugin
 
 RUN yum install -y ca-certificates file tzdata nfs-utils xfsprogs e4fsprogs nc pciutils && chmod 777 /bin/evs-csi-plugin
 
-
-ENTRYPOINT ["/bin/evs-csi-plugin"]
+CMD ["/bin/evs-csi-plugin"]
+# ENTRYPOINT ["/bin/evs-csi-plugin"]
