--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,7 +41,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: Dockerfile
+        file: ./deploy-engine/Dockerfile
         push: true
         platforms: linux/amd64,linux/arm64/v8
         tags: |
