--- a/deploy-engine/Dockerfile
+++ b/deploy-engine/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:8-jdk-slim
 RUN set -ex && \
     apt-get update && \
     ln -s /lib /lib64 && \
-    apt install -y bash tini libc6 libpam-modules libnss3  curl jq wget sudo && \
+    apt install -y bash tini libc6 libpam-modules libnss3  curl jq wget sudo  netcat telnet && \
     rm /bin/sh && \
     ln -sv /bin/bash /bin/sh && \
     echo "auth required pam_wheel.so use_uid" >> /etc/pam.d/su && \
